--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -2,6 +2,13 @@
 @import "./libs/normalize.scss";
 @import "./libs/fonts.scss";
 
+
+// PAGES
+@import "../pages/HomePage/HomePage.scss";
+
+// COMPONENTS
+@import "../components/EarthTypeMenu/EarthTypeMenu.scss";
+
 .App {
 	position: relative;
 	min-height: 100vh;
@@ -34,111 +41,5 @@
 		background: radial-gradient(40.78% 34.59% at 48.57% 60.13%, rgba(255, 92, 0, 0.8) 0%, rgba(238, 45, 1, 0) 99.99%, rgba(238, 45, 1, 0) 100%);
 		border-radius: 100px;
 		transform: rotate(-28.59deg);
-	}
-}
-
-.wrapper {
-	text-transform: uppercase;
-	padding-bottom: 2.5rem;
-
-	padding-top: 32px;
-
-	button {
-		padding: 12px 24px;
-		height: 40px;
-		border: 1px solid #F4F4F4;
-		border-radius: 6px;
-		text-align: center;
-		color: $white;
-		border-color: $white;
-	}
-}
-
-.title {
-	padding-bottom: 48px;
-
-	h1 {
-		font-family: RSLight;
-		font-size: 32px;
-		font-weight: 250;
-		line-height: 60px;
-	}
-}
-
-.content {
-	h2 {
-		font-family: RSRegular;
-		font-style: normal;
-		font-weight: 400;
-		font-size: 24px;
-		line-height: 32px;
-
-		padding-bottom: 45px;
-	}
-
-	.time_buttons {
-		margin-left: 78px;
-		padding-bottom: 96px;
-
-		button {
-			font-family: RSRegular;
-			font-style: normal;
-			font-weight: 400;
-			font-size: 16px;
-			line-height: 16px;
-			margin-right: 32px;
-
-		}
-	}
-
-	.instrument_buttons {
-		margin-left: 78px;
-		padding-bottom: 96px;
-
-		button {
-			font-family: RSRegular;
-			font-style: normal;
-			font-weight: 400;
-			font-size: 16px;
-			line-height: 16px;
-			margin-right: 32px;
-			margin-right: 32px;
-		}
-	}
-
-	.learn {
-		button {
-			font-family: RSBold;
-			font-weight: 600;
-			font-size: 20px;
-			line-height: 20px;
-			padding: 24px 24px;
-			text-align: center;
-		}
-	}
-}
-
-
-.footer {
-
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 2.5rem;
-
-	button {
-		text-transform: none;
-		color: $white;
-		font-family: 'RSLight';
-		font-style: normal;
-		font-weight: 400;
-		font-size: 14px;
-		line-height: 14px;
-		text-align: center;
-		color: #BBBBBB;
 	}
 }
