--- a/frontend/src/pages/HomePage/HomePage.scss
+++ b/frontend/src/pages/HomePage/HomePage.scss
@@ -77,6 +77,10 @@
                 border: 1px solid #313131; 
                 color: #313131;
             }
+			&.btn-selected {
+                background: radial-gradient(50% 50% at 50% 50%, #052DC9 0%, rgba(5, 45, 201, 0.5) 57.08%, rgba(238, 45, 1, 0.01) 100%);
+                border-radius: 6px;
+            }
 		}
 	}
 
@@ -85,6 +89,7 @@
 			font-family: RSBold;
 			font-weight: 600;
 			font-size: 20px;
+			height: 64px;
 			line-height: 20px;
 			padding: 24px 24px;
 			text-align: center;
@@ -114,6 +119,8 @@
 		font-size: 14px;
 		line-height: 14px;
 		text-align: center;
-		color: #BBBBBB;
+		a {
+			color: #BBBBBB
+		}
 	}
 }
