BreadCrumbs component prototype and minor changes

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -8,6 +8,8 @@
 
 // COMPONENTS
 @import "../components/EarthTypeMenu/EarthTypeMenu.scss";
+@import "../components/Footer/Footer.scss";
+@import "../components/Breadcrumbs/Breadcrumbs.scss";
 
 .App {
 	position: relative;
