--- a/frontend/src/pages/HomePage/HomePage.scss
+++ b/frontend/src/pages/HomePage/HomePage.scss
@@ -93,6 +93,16 @@
 			line-height: 20px;
 			padding: 24px 24px;
 			text-align: center;
+			padding: 0;
+			a {
+				display: flex;
+				align-items: center;
+				padding: 12px 24px;
+				height: inherit;
+			}
+			&:hover a {
+				color: inherit;
+			}
 		}
 	}
 }
