Improved routing, chanched pages structure, added ArticleListPage prototype

--- a/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -1,9 +1,14 @@
-.breadcrumbs {
-    .MuiBreadcrumbs-separator {
-        color: #F4F4F4;
+.breadcrumbs-container {
+    .breadcrumbs {
+        
+        .MuiBreadcrumbs-separator {
+            color: #F4F4F4;
+        }
+        a {
+            display: flex;
+            align-items: center;
+        }
     }
-    a {
-        display: flex;
-        align-items: center;
-    }
+    padding-bottom: 64px;
+    top: 32px;
 }
