--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -5,11 +5,13 @@
 
 // PAGES
 @import "../pages/HomePage/HomePage.scss";
+@import "../pages/ArticlePage/ArticleListPage.scss";
 
 // COMPONENTS
 @import "../components/EarthTypeMenu/EarthTypeMenu.scss";
 @import "../components/Footer/Footer.scss";
 @import "../components/Breadcrumbs/Breadcrumbs.scss";
+@import "../components/ArticleCard/ArticleCard.scss";
 
 .App {
 	position: relative;
