--- a/frontend/src/components/ArticleCard/ArticleCard.scss
+++ b/frontend/src/components/ArticleCard/ArticleCard.scss
@@ -10,7 +10,7 @@
         height: 210px;
     }
     .title {
-        padding-top: 5px;
+        padding: 10px;
         padding-bottom: 25px;
     }
 }
