--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -6,6 +6,8 @@
 // PAGES
 @import "../pages/HomePage/HomePage.scss";
 @import "../pages/ArticlePage/ArticleListPage.scss";
+@import "../pages/ThreeDEarthPage/ThreeDEarthPage.scss";
+
 
 // COMPONENTS
 @import "../components/EarthTypeMenu/EarthTypeMenu.scss";
@@ -18,6 +20,17 @@
 	min-height: 100vh;
 	margin-left: 30px;
 	margin-right: 30px;
+
+	button {
+		font-family: RSRegular;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 16px;
+
+		text-align: center;
+		text-transform: uppercase;
+	}
 
 	.rect1 {
 		position: absolute;
