added 3d earth component

--- a/frontend/src/pages/ThreeDEarthPage/ThreeDEarthPage.scss
+++ b/frontend/src/pages/ThreeDEarthPage/ThreeDEarthPage.scss
@@ -1,3 +1,22 @@
+parent {
+	position: relative;
+}
+
+.left {
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+}
+
+.right {
+	position: absolute;
+	left: 50%;
+	right: 0;
+	top: 0;
+	bottom: 0;
+}
+
 h1 {
 	font-family: RSRegular;
 	font-style: normal;
