fixed footer buttons in 3dEarth page

--- a/frontend/src/pages/ThreeDEarthPage/ThreeDEarthPage.scss
+++ b/frontend/src/pages/ThreeDEarthPage/ThreeDEarthPage.scss
@@ -46,6 +46,10 @@ p {
 	text-transform: none;
 }
 
-footer {
-	justify-content: start;
+
+.footer {
+	&_not_home {
+		justify-content: space-between;
+		width: 50%;
+	}
 }
