--- a/frontend/src/pages/ArticlePage/ArticleListPage.scss
+++ b/frontend/src/pages/ArticlePage/ArticleListPage.scss
@@ -1,19 +1,15 @@
 .article {
     .article_list_content {
         ul {
-            // display: flex;
-            // flex-wrap: wrap;
-            // justify-content: center;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr 0.5fr;
             grid-template-areas:
                 "a b c d"
                 "e f g d";
             column-gap: 2.5em;
-            row-gap: 32px;
-            padding-left: 130px;
-            // padding-right: 67.5px;
-            // padding-bottom: 35px;
+            row-gap: 30px;
+            padding-left: 100px;
+            padding-top: 30px;
             svg {
                 color: $white;
                 font-size: xx-large;
@@ -36,7 +32,7 @@
             #card5 {
                 grid-area: g;
             }
-            #card6 {
+            #arrow6 {
                 grid-area: d;
                 align-self: center;
                 :hover {
@@ -44,5 +40,6 @@
                 }
             }
         }
+
     }
 }
