--- a/frontend/src/components/ArticleCard/ArticleCard.scss
+++ b/frontend/src/components/ArticleCard/ArticleCard.scss
@@ -3,9 +3,9 @@
     flex-direction: column;
     border: 1px solid #FFFFFF;
     border-radius: 4px;
-    width: 350px;
     height: 270px;
     color: $white;
+    cursor: pointer;
     .photo {
         height: 210px;
     }
