Article ToolComponent prototype

--- a/frontend/src/components/ArticleCard/ArticleCard.scss
+++ b/frontend/src/components/ArticleCard/ArticleCard.scss
@@ -6,6 +6,10 @@
     height: 270px;
     color: $white;
     cursor: pointer;
+    &:hover {
+        border-color: $orange;
+        color: $orange;
+    }
     .photo {
         height: 210px;
     }
