--- a/frontend/src/pages/ArticlePage/ArticleListPage.scss
+++ b/frontend/src/pages/ArticlePage/ArticleListPage.scss
@@ -1,5 +1,5 @@
-.article {
-    .article_list_content {
+.article_list {
+    &__content {
         // padding-left: 60px;
         svg {
             font-size: xx-large;
