--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -15,6 +15,10 @@
 @import "../components/Breadcrumbs/Breadcrumbs.scss";
 @import "../components/ArticleCard/ArticleCard.scss";
 
+
+// TOOL COMPONENTS
+@import "../components/ToolComponents/Article/Article.scss";
+
 .App {
 	position: relative;
 	min-height: 100vh;
