--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -5,6 +5,7 @@
 	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
+	padding-top: 10px;
 	button {
 		border: 1px solid $gray;
 		font-family: RSRegular;
