ArticleSourcesMenu prototype and small fixes

--- a/frontend/src/components/EarthTypeMenu/EarthTypeMenu.scss
+++ b/frontend/src/components/EarthTypeMenu/EarthTypeMenu.scss
@@ -3,7 +3,7 @@
 .MuiPaper-root.MuiMenu-paper.MuiPaper-root.MuiPopover-paper {
     background-color: $black;
     text-transform: uppercase;
-    font-family: RSRegular;
+    font-family: RSRegular, serif;
 }
 
 
