--- a/frontend/src/pages/HomePage/HomePage.scss
+++ b/frontend/src/pages/HomePage/HomePage.scss
@@ -118,7 +118,7 @@
         border: none;
 		text-transform: none;
 		color: $white;
-		font-family: 'RSLight';
+		font-family: RSLight;
 		font-style: normal;
 		font-weight: 400;
 		font-size: 14px;
