--- a/frontend/src/components/ToolComponents/Article/Article.scss
+++ b/frontend/src/components/ToolComponents/Article/Article.scss
@@ -27,6 +27,8 @@
             padding-top: 24px;
             padding-bottom: 20px;
             color: #B9B9B9;
+            display: flex;
+            align-items: center;
         }
         &__content {
             font-size: 14px;
