--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -6,6 +6,7 @@
 @import "../components/EarthTypeMenu/EarthTypeMenu.scss";
 @import "../components/ArticleSourcesMenu/ArticleSourcesMenu.scss";
 
+@import "../components/ArticleVerticalList/ArticleVerticalList.scss";
 @import "../components/ArticleCard/ArticleCard.scss";
 @import "../components/ToolComponents/Article/Article.scss";
 @import "../components/Footer/Footer.scss";
