--- a/frontend/src/components/ArticleCard/ArticleCard.scss
+++ b/frontend/src/components/ArticleCard/ArticleCard.scss
@@ -6,6 +6,7 @@
     border: 1px solid #FFFFFF;
     border-radius: 4px;
     height: 270px;
+    //width: max-content;
     color: $white;
     cursor: pointer;
     &:hover {
@@ -16,7 +17,6 @@
         height: 210px;
     }
     .title {
-        padding: 10px;
-        padding-bottom: 25px;
+        padding: 10px 10px 25px;
     }
 }
