(ArticleListPage, ArticleVerticalList, Article) data fetching improvement, useFetchAllArticlesGroupByHook improvement, minor changes

--- a/frontend/src/components/ToolComponents/Article/Article.scss
+++ b/frontend/src/components/ToolComponents/Article/Article.scss
@@ -43,6 +43,7 @@
             color: #B9B9B9;
             overflow: auto;
             height: 400px;
+            width: 1020px;
         }
     }
     &--articleVerticalList {
