--- a/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -112,7 +112,7 @@
 	left: 0;
 	// opacity: 80%;
 	// transition: 0.3s;
-	animation:fadeIn 0.1s ease-in;
+	animation:fadeIn 0.2s ease-in-out;
 
 }
 
@@ -122,7 +122,7 @@
       opacity:0;
     }
     to {
-      opacity:90%;
+      opacity:100%;
     }
 }
 
