--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -4,9 +4,8 @@
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	margin-top: 60px;
 	button {
-		border: 1px solid #F4F4F4;
+		border: 1px solid $gray;
 		font-family: RSRegular;
 		text-transform: uppercase;
 	}
