--- a/frontend/src/components/Layout/Layout.scss
+++ b/frontend/src/components/Layout/Layout.scss
@@ -1,17 +1,12 @@
-body{
-  min-height: 100vh;
-  margin: 0;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-}
-
 header{
   min-height:2rem;
   padding-bottom: 50px;
 }
 
 footer{
-  min-height:2rem;
+  position: fixed;
   bottom: 0;
+  min-height:2rem;
   padding-bottom: 3rem;
+  width: 95%;
 }
