--- a/frontend/src/styles/libs/normalize.scss
+++ b/frontend/src/styles/libs/normalize.scss
@@ -53,3 +53,20 @@ a {
 .no_select {
 	@include user-select(none);
 }
+
+::-webkit-scrollbar {
+	width: 12px;
+}
+
+::-webkit-scrollbar-track {
+	background: $black;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #1E1E1E;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #2b2b2b;
+}
