--- a/frontend/src/components/ArticleSourcesMenu/ArticleSourcesMenu.scss
+++ b/frontend/src/components/ArticleSourcesMenu/ArticleSourcesMenu.scss
@@ -9,12 +9,16 @@
   }
 }
 
+// div behind actual menu box
+.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiPaper-root.MuiMenu-paper.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation8.MuiPopover-paper.css-1poimk-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper {
+  background-color: $black;
+}
+
 // ul
 #sources-menu {
   .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
     color: $white;
     width: 900px;
-    border-radius: 20px;
     .sources-menu_item {
       display: flex;
       flex-direction: row;
