--- a/frontend/src/components/ToolComponents/Article/Article.scss
+++ b/frontend/src/components/ToolComponents/Article/Article.scss
@@ -41,7 +41,8 @@
             line-height: 20px;
             padding-top: 32px;
             color: #B9B9B9;
-            overflow: auto;
+            white-space: normal;
+            overflow-y: auto;
             height: 400px;
             width: 1020px;
         }
